# a-universe-from-nothing

./: .gitignore  .gitreview  .yamllint  Dockerfile  Jenkinsfile  README.rst  a-universe-from-nothing.sh  ansible.cfg  configure-local-networking.sh  docker-entrypoint.sh  download-cephadm-config.sh  init-runonce.sh  kayobe-env  pull-retag-push-images.sh  setup.cfg  tenks-compute.yml  tenks-network-on-boot.service  tenks-network-setup  tenks-storage.yml  tenks.yml  test-requirements.txt  tox.ini
etc/kayobe/: a-universe-from-nothing.yml  apt.yml  bifrost.yml  bmc.yml  cadvisor.yml  ceph.yml  cephadm.yml  cephadm.yml.template  compute.yml  container-engine.yml  controllers.yml  dell-switch-bmp.yml  dnf.yml  dns.yml  docker-registry.yml  docker.yml  globals.yml  grafana.yml  idrac.yml  infra-vms.yml  inspector.yml  ipa.yml  ironic.yml  kolla.yml  libvirt.yml  logging.yml  monasca.yml  monitoring.yml  network-allocation.yml  networks.yml  neutron.yml  node-exporter.yml  nova.yml  ntp.yml  opensm.yml  openstack.yml  overcloud-dib.yml  overcloud.yml  pip.yml  proxy.yml  (+11 more)
etc/kayobe/ansible/: ceph-config.yml  cephadm.yml  filter_plugins  group_vars  host-logging.yml  lab-hosts.yml  pull-retag-push.yml  reboot.yml  repositories.yml  requirements.yml  test_plugins
etc/kayobe/environments/dev/: network-allocation.yml  overcloud.yml
etc/kayobe/environments/prod/: network-allocation.yml  overcloud.yml
etc/kayobe/inventory/: groups  hosts  hosts.example  infra-vms
etc/kayobe/inventory/host_vars/: infra-vm-1
etc/kayobe/kolla/: globals.yml
zuul.d/: project.yaml
(+34 files in other folders)
